chore: adding get user by id endpoint
